--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Old+Persian&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Smooch+Sans:wght@100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -18,9 +20,9 @@
             lezione precedente</p>
     </header>
     <main>
-        <img src="./img/Screenshot 2025-01-30 234107.png" alt="Froggy Flex">
+        <img src="./img/Screenshot 2025-01-30 234107.png" alt="Froggy Flex" class="foto">
         <p> questo gioco si chiama FroggyFlex</p>
-        <img src="./img/Screenshot 2025-01-31 180743.png" alt="Flex Tower">
+        <img src="./img/Screenshot 2025-01-31 180743.png" alt="Flex Tower" class="foto">
         <p>questo invece è FlexTower</p>
     </main>
     <footer>
